--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1089,9 +1089,9 @@ section {
 }
 
 .team .member img {
-  max-width: 60%;
-  border-radius: 50%;
-  margin: 0 0 30px 0;
+  max-width: 100%;
+  border-radius: 0%;
+  margin: 0 0 0px 0;
 }
 
 .team .member h4 {
@@ -1109,7 +1109,7 @@ section {
 .team .member p {
   padding-top: 10px;
   font-size: 14px;
-  font-style: italic;
+  font-style: bold;
   color: #aaaaaa;
 }
 
