--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -793,6 +793,50 @@ section {
 }
 
 /*--------------------------------------------------------------
+# MyButton
+--------------------------------------------------------------*/
+.mybtn {
+  align-items: center;
+  padding: 30px 30px;
+}
+
+.mybtn h3 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.mybtn p {
+  color: #fff;
+}
+
+.mybtn .mybtn-btn {
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 28px;
+  transition: 0.5s;
+  margin-top: 10px;
+  border: 2px solid #f26722;
+  color: #fff;
+}
+
+.mybtn .mybtn-btn:hover {
+  background: #a0a0a0;
+  border: 2px solid #f26722;
+  color: #ffffff;
+}
+
+@media (min-width: 1024px) {
+  #mybtn {
+    background-attachment: fixed;
+  }
+}
+
+/*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio #portfolio-flters {
